<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="?attr/loginMilestonesHeight"
    android:tag="content">

    <TextView
        android:id="@+id/configure_consent_title"
        style="?attr/textAppearanceHeadline2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/login_configure_consent_title_text"
        android:textAlignment="center"
        android:textSize="52sp"
        app:layout_constraintBottom_toTopOf="@id/configure_consent_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.25"
        app:layout_constraintVertical_chainStyle="packed" />

    <ImageView
        android:id="@+id/configure_consent_image"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="16dp"
        android:contentDescription="@string/login_configure_consent_content_description"
        app:layout_constraintBottom_toTopOf="@id/configure_consent_description"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_max="200dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/configure_consent_title"
        app:srcCompat="@drawable/ic_baseline_format_list_numbered_24" />

    <TextView
        android:id="@+id/configure_consent_description"
        style="?attr/textAppearanceBody1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/login_configure_consent_body_text"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@id/configure_consent_description_2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/configure_consent_image" />

    <TextView
        android:id="@+id/configure_consent_description_2"
        style="?attr/textAppearanceBody1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/login_configure_consent_body_text_2"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@id/back_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/configure_consent_description" />

    <Button
        android:id="@+id/back_button"
        style="?attr/borderlessButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/back"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/configure_consent_continue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/string_continue"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>