<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            style="?toolbarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:tag="toolbar"
            app:menu="@menu/menu_dashboard"
            app:title="@string/dashboard_my_data_toolbar_text" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="4dp"
            android:layout_gravity="bottom"
            android:elevation="4dp"
            app:layout_constraintBottom_toBottomOf="@id/toolbar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <ProgressBar
                android:id="@+id/progress_horizontal"
                style="@style/Widget.AppCompat.ProgressBar.Horizontal"
                android:layout_width="match_parent"
                android:layout_height="16dp"
                android:layout_gravity="center"
                android:alpha="0"
                android:indeterminate="true"
                android:visibility="invisible"
                tools:alpha="1"
                tools:visibility="visible" />
        </FrameLayout>
    </FrameLayout>

    <ScrollView
        android:id="@+id/scroll_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:tag="content">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:animateLayoutChanges="true"
            android:clipChildren="false"
            android:clipToPadding="false"
            android:padding="16dp">

            <LinearLayout
                android:id="@+id/section_login_error"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:orientation="vertical"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:visibility="visible">

                <TextView
                    android:id="@+id/section_login_error_title"
                    style="?textAppearanceHeadline5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/dashboard_my_data_login_error_title_text" />

                <TextView
                    android:id="@+id/section_login_error_description"
                    style="?textAppearanceBody2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/dashboard_my_data_login_error_description_text" />

                <Button
                    android:id="@+id/section_login_error_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:backgroundTint="@color/design_default_color_error"
                    android:text="@string/dashboard_my_data_login_error_button_text" />

            </LinearLayout>

            <TextView
                android:id="@+id/section_data_selection_title"
                style="?textAppearanceHeadline5"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/dashboard_my_data_data_selection_title_text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/section_background_sharing_share_now_button" />

            <com.healthmetrix.myscience.feature.dataselection.DataSelectionView
                android:id="@+id/section_data_selection_data_selection_view"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:dataSelectionCardMargin="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/section_data_selection_title" />

            <TextView
                android:id="@+id/section_background_sharing_title"
                style="?textAppearanceHeadline5"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/dashboard_my_data_background_sharing_title_text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/section_login_error" />

            <TextView
                android:id="@+id/section_background_sharing_description"
                style="?textAppearanceBody2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/dashboard_my_data_background_sharing_description_text"
                app:layout_constraintEnd_toStartOf="@id/section_background_sharing_enable_switch"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/section_background_sharing_title" />

            <!-- state controlled by settings -->
            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/section_background_sharing_enable_switch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:saveEnabled="false"
                app:layout_constraintBottom_toBottomOf="@id/section_background_sharing_description"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/section_background_sharing_description" />

            <Button
                android:id="@+id/section_background_sharing_share_now_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/dashboard_my_data_background_sharing_share_now_text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/section_background_sharing_description" />

            <TextView
                android:id="@+id/section_revoke_title"
                style="?textAppearanceHeadline5"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/dashboard_my_data_revoke_title_text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/section_data_selection_data_selection_view" />

            <TextView
                android:id="@+id/section_revoke_description"
                style="?textAppearanceBody2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/dashboard_my_data_revoke_description_text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/section_revoke_title" />

            <Button
                android:id="@+id/section_revoke_revoke_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/dashboard_my_data_revoke_button_text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/section_revoke_description" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</LinearLayout>